Estilizando e atualizando icones dos accordions cards.

--- a/Bliblioteca 2020/index.html
+++ b/Bliblioteca 2020/index.html
@@ -1198,6 +1198,7 @@
                     <h5 class="mb-0 b-icon">
                       <button class="btn btn-link d-flex align-items-center" data-toggle="collapse" data-target="#collapse-6" aria-expanded="true" aria-controls="collapse-6">
                         Card 1
+                        <span class="seta-accordion"></span>
                       </button>
                     </h5>
                   </div>
@@ -1212,6 +1213,7 @@
                     <h5 class="mb-0 b-icon">
                       <button class="btn btn-link d-flex align-items-center collapsed" data-toggle="collapse" data-target="#collapse-7" aria-expanded="false" aria-controls="collapse-7">
                         Card 2
+                        <span class="seta-accordion"></span>
                       </button>
                     </h5>
                   </div>
@@ -1226,6 +1228,7 @@
                     <h5 class="mb-0 b-icon">
                       <button class="btn btn-link d-flex align-items-center collapsed" data-toggle="collapse" data-target="#collapse-8" aria-expanded="false" aria-controls="collapse-8">
                         Card 3
+                        <span class="seta-accordion"></span>
                       </button>
                     </h5>
                   </div>
@@ -1240,6 +1243,7 @@
                     <h5 class="mb-0 b-icon">
                       <button class="btn btn-link d-flex align-items-center collapsed" data-toggle="collapse" data-target="#collapse-9" aria-expanded="false" aria-controls="collapse-9">
                         Card 4
+                        <span class="seta-accordion"></span>
                       </button>
                     </h5>
                   </div>
@@ -1254,6 +1258,7 @@
                     <h5 class="mb-0 b-icon">
                       <button class="btn btn-link d-flex align-items-center collapsed" data-toggle="collapse" data-target="#collapse-10" aria-expanded="false" aria-controls="collapse-10">
                         Card 5
+                        <span class="seta-accordion"></span>
                       </button>
                     </h5>
                   </div>
@@ -1272,7 +1277,6 @@
               <h6>Chamar no head do html:</h6>
               <p>&lt;link rel=&quot;stylesheet&quot; href=&quot;css/bootstrap.min.css&quot;&gt;</p>
               <p>&lt;link rel=&quot;stylesheet&quot; href=&quot;css/estilo.css&quot;&gt;</p>
-              <p>&lt;link rel=&quot;stylesheet&quot; href=&quot;css/bradseg_icons.css&quot;&gt;</p>
               <h6>Chamar os scripts no final da página antes do fechamento da tag body:</h6>
               <p>&lt;script src=&quot;js/jquery-3.3.1.slim.min.js&quot;&gt;&lt;/script&gt;</p>
               <p>&lt;script src=&quot;js/popper.min.js&quot;&gt;&lt;/script&gt;</p>
@@ -1285,7 +1289,6 @@
               <p><a href="https://github.com/fernandopinhel/biblioteca-de-componentes/blob/master/downloads/bootstrap-4.2.1-dist.zip" target="_blank">Bootstrap 4.2</a></p>
               <p><a href="https://github.com/fernandopinhel/biblioteca-de-componentes/blob/master/downloads/jquery-3.3.1.slim.min.js" target="_blank">Jquery 3.3.1 slim min</a></p>
               <p><a href="https://github.com/fernandopinhel/biblioteca-de-componentes/blob/master/downloads/popper.min.js" target="_blank">Popper min</a></p>
-              <p><a href="https://github.com/fernandopinhel/biblioteca-de-componentes/blob/master/downloads/font-bradesco-e-css-icon.zip" target="_blank">Font + CSS icones Bradesco</a></p>
             </div>
           </div>
           <div class="col-md-6">
@@ -1299,6 +1302,7 @@
                         &lt;h5 class=&quot;mb-0 b-icon&quot;&gt;
                           &lt;button class=&quot;btn btn-link d-flex align-items-center&quot; data-toggle=&quot;collapse&quot; data-target=&quot;#collapse-6&quot; aria-expanded=&quot;true&quot; aria-controls=&quot;collapse-6&quot;&gt;
                             Card 1
+                            &lt;span class=&quot;seta-accordion&quot;&gt;&lt;/span&gt;
                           &lt;/button&gt;
                         &lt;/h5&gt;
                       &lt;/div&gt;
@@ -1313,6 +1317,7 @@
                         &lt;h5 class=&quot;mb-0 b-icon&quot;&gt;
                           &lt;button class=&quot;btn btn-link d-flex align-items-center collapsed&quot; data-toggle=&quot;collapse&quot; data-target=&quot;#collapse-7&quot; aria-expanded=&quot;false&quot; aria-controls=&quot;collapse-7&quot;&gt;
                             Card 2
+                            &lt;span class=&quot;seta-accordion&quot;&gt;&lt;/span&gt;
                           &lt;/button&gt;
                         &lt;/h5&gt;
                       &lt;/div&gt;
@@ -1327,6 +1332,7 @@
                         &lt;h5 class=&quot;mb-0 b-icon&quot;&gt;
                           &lt;button class=&quot;btn btn-link d-flex align-items-center collapsed&quot; data-toggle=&quot;collapse&quot; data-target=&quot;#collapse-8&quot; aria-expanded=&quot;false&quot; aria-controls=&quot;collapse-8&quot;&gt;
                             Card 3
+                            &lt;span class=&quot;seta-accordion&quot;&gt;&lt;/span&gt;
                           &lt;/button&gt;
                         &lt;/h5&gt;
                       &lt;/div&gt;
@@ -1341,6 +1347,7 @@
                         &lt;h5 class=&quot;mb-0 b-icon&quot;&gt;
                           &lt;button class=&quot;btn btn-link d-flex align-items-center collapsed&quot; data-toggle=&quot;collapse&quot; data-target=&quot;#collapse-9&quot; aria-expanded=&quot;false&quot; aria-controls=&quot;collapse-9&quot;&gt;
                             Card 4
+                            &lt;span class=&quot;seta-accordion&quot;&gt;&lt;/span&gt;
                           &lt;/button&gt;
                         &lt;/h5&gt;
                       &lt;/div&gt;
@@ -1355,6 +1362,7 @@
                         &lt;h5 class=&quot;mb-0 b-icon&quot;&gt;
                           &lt;button class=&quot;btn btn-link d-flex align-items-center collapsed&quot; data-toggle=&quot;collapse&quot; data-target=&quot;#collapse-10&quot; aria-expanded=&quot;false&quot; aria-controls=&quot;collapse-10&quot;&gt;
                             Card 5
+                            &lt;span class=&quot;seta-accordion&quot;&gt;&lt;/span&gt;
                           &lt;/button&gt;
                         &lt;/h5&gt;
                       &lt;/div&gt;
@@ -1375,33 +1383,47 @@
               <p>estilo.css</p>
               <pre>
                 <code class="language-css" data-lang="css">
-                  // accordion + icones bradesco
+                  // accordion icones
 
                   #accordion .card .card-header h5 button{
                     width: 100%;
                     text-align: left;
                     text-decoration: none;
+                    padding: 15px;
                   }
+
+                  .card-header{padding: 0;}
 
                   .b-icon &gt; button {
                     display: block;
                     position: relative;
                   }
 
-                  .b-icon &gt; button:after {
-                    content: &quot;\e958&quot;;
-                    font-family: &#039;bradesco_v2&#039;;
+                  .seta-accordion{
                     position: absolute;
-                    right: 0;
-                    font-size: 23px;
+                    right: 15px;
+                    background:url(../img/seta-accordion.svg);
+                    transform: rotate(180deg); /* Equal to rotateZ(45deg) */
+                    width: 30px;
+                    height: 21px;
+                    background-repeat: no-repeat;
+                    background-position: center;
+                    transition: 0.6s all;
                   }
 
-                  .b-icon &gt; button[aria-expanded=&quot;true&quot;]:after {
-                    content: &quot;\e96d&quot;;
-                    font-size: 23px;
+                  .b-icon &gt; button[aria-expanded=&quot;true&quot;] .seta-accordion{
+                    position: absolute;
+                    right: 15px;
+                    background:url(../img/seta-accordion.svg);
+                    width: 30px;
+                    height: 21px;
+                    background-repeat: no-repeat;
+                    background-position: center;
+                    transform: rotate(0deg);
+                    transition: 0.6s all;
                   }
 
-                  // fim accordion + icones bradesco
+                  // fim accordion icones
                 </code>
               </pre>
             </div>
@@ -1419,6 +1441,7 @@
                     <h5 class="mb-0 b-icon">
                       <button class="btn btn-link d-flex align-items-center" type="button" data-parent="#accordion" data-toggle="collapse" data-target="#collapse-1" aria-expanded="true" aria-controls="collapse-1">
                         Card 1
+                        <span class="seta-accordion"></span>
                       </button>
                     </h5>
                   </div>
@@ -1433,6 +1456,7 @@
                     <h5 class="mb-0 b-icon">
                       <button class="btn btn-link collapsed d-flex align-items-center" type="button" data-toggle="collapse" data-parent="#accordion" data-target="#collapse-2" aria-expanded="false" aria-controls="collapse-2">
                         Card 2
+                        <span class="seta-accordion"></span>
                       </button>
                     </h5>
                   </div>
@@ -1447,6 +1471,7 @@
                     <h5 class="mb-0 b-icon">
                       <button class="btn btn-link collapsed d-flex align-items-center" type="button" data-parent="#accordion" data-toggle="collapse" data-target="#collapse-3" aria-expanded="false" aria-controls="collapse-3">
                         Card 3
+                        <span class="seta-accordion"></span>
                       </button>
                     </h5>
                   </div>
@@ -1461,6 +1486,7 @@
                     <h5 class="mb-0 b-icon">
                       <button class="btn btn-link collapsed d-flex align-items-center" type="button" data-parent="#accordion" data-toggle="collapse" data-target="#collapse-4" aria-expanded="false" aria-controls="collapse-4">
                         Card 4
+                        <span class="seta-accordion"></span>
                       </button>
                     </h5>
                   </div>
@@ -1475,6 +1501,7 @@
                     <h5 class="mb-0 b-icon">
                       <button class="btn btn-link collapsed d-flex align-items-center" type="button" data-parent="#accordion" data-toggle="collapse" data-target="#collapse-5" aria-expanded="false" aria-controls="collapse-5">
                         Card 5
+                        <span class="seta-accordion"></span>
                       </button>
                     </h5>
                   </div>
@@ -1493,7 +1520,6 @@
               <h6>Chamar no head do html:</h6>
               <p>&lt;link rel=&quot;stylesheet&quot; href=&quot;css/bootstrap.min.css&quot;&gt;</p>
               <p>&lt;link rel=&quot;stylesheet&quot; href=&quot;css/estilo.css&quot;&gt;</p>
-              <p>&lt;link rel=&quot;stylesheet&quot; href=&quot;css/bradseg_icons.css&quot;&gt;</p>
               <h6>Chamar os scripts no final da página antes do fechamento da tag body:</h6>
               <p>&lt;script src=&quot;js/jquery-3.3.1.slim.min.js&quot;&gt;&lt;/script&gt;</p>
               <p>&lt;script src=&quot;js/popper.min.js&quot;&gt;&lt;/script&gt;</p>
@@ -1506,7 +1532,6 @@
               <p><a href="https://github.com/fernandopinhel/biblioteca-de-componentes/blob/master/downloads/bootstrap-4.2.1-dist.zip" target="_blank">Bootstrap 4.2</a></p>
               <p><a href="https://github.com/fernandopinhel/biblioteca-de-componentes/blob/master/downloads/jquery-3.3.1.slim.min.js" target="_blank">Jquery 3.3.1 slim min</a></p>
               <p><a href="https://github.com/fernandopinhel/biblioteca-de-componentes/blob/master/downloads/popper.min.js" target="_blank">Popper min</a></p>
-              <p><a href="https://github.com/fernandopinhel/biblioteca-de-componentes/blob/master/downloads/font-bradesco-e-css-icon.zip" target="_blank">Font + CSS icones Bradesco</a></p>
             </div>
           </div>
           <div class="col-md-6">
@@ -1520,12 +1545,13 @@
                         &lt;h5 class=&quot;mb-0 b-icon&quot;&gt;
                           &lt;button class=&quot;btn btn-link d-flex align-items-center&quot; type=&quot;button&quot; data-parent=&quot;#accordion&quot; data-toggle=&quot;collapse&quot; data-target=&quot;#collapse-1&quot; aria-expanded=&quot;true&quot; aria-controls=&quot;collapse-1&quot;&gt;
                             Card 1
+                            &lt;span class=&quot;seta-accordion&quot;&gt;&lt;/span&gt;
                           &lt;/button&gt;
                         &lt;/h5&gt;
                       &lt;/div&gt;
                       &lt;div id=&quot;collapse-1&quot; class=&quot;collapse show&quot; role=&quot;tabpanel&quot; aria-labelledby=&quot;heading-1&quot;&gt;
                         &lt;div class=&quot;card-body&quot;&gt;
-                          Card 1
+                          Conte&uacute;do collapse 1
                         &lt;/div&gt;
                       &lt;/div&gt;
                     &lt;/div&gt;
@@ -1534,6 +1560,7 @@
                         &lt;h5 class=&quot;mb-0 b-icon&quot;&gt;
                           &lt;button class=&quot;btn btn-link collapsed d-flex align-items-center&quot; type=&quot;button&quot; data-toggle=&quot;collapse&quot; data-parent=&quot;#accordion&quot; data-target=&quot;#collapse-2&quot; aria-expanded=&quot;false&quot; aria-controls=&quot;collapse-2&quot;&gt;
                             Card 2
+                            &lt;span class=&quot;seta-accordion&quot;&gt;&lt;/span&gt;
                           &lt;/button&gt;
                         &lt;/h5&gt;
                       &lt;/div&gt;
@@ -1548,6 +1575,7 @@
                         &lt;h5 class=&quot;mb-0 b-icon&quot;&gt;
                           &lt;button class=&quot;btn btn-link collapsed d-flex align-items-center&quot; type=&quot;button&quot; data-parent=&quot;#accordion&quot; data-toggle=&quot;collapse&quot; data-target=&quot;#collapse-3&quot; aria-expanded=&quot;false&quot; aria-controls=&quot;collapse-3&quot;&gt;
                             Card 3
+                            &lt;span class=&quot;seta-accordion&quot;&gt;&lt;/span&gt;
                           &lt;/button&gt;
                         &lt;/h5&gt;
                       &lt;/div&gt;
@@ -1562,6 +1590,7 @@
                         &lt;h5 class=&quot;mb-0 b-icon&quot;&gt;
                           &lt;button class=&quot;btn btn-link collapsed d-flex align-items-center&quot; type=&quot;button&quot; data-parent=&quot;#accordion&quot; data-toggle=&quot;collapse&quot; data-target=&quot;#collapse-4&quot; aria-expanded=&quot;false&quot; aria-controls=&quot;collapse-4&quot;&gt;
                             Card 4
+                            &lt;span class=&quot;seta-accordion&quot;&gt;&lt;/span&gt;
                           &lt;/button&gt;
                         &lt;/h5&gt;
                       &lt;/div&gt;
@@ -1576,6 +1605,7 @@
                         &lt;h5 class=&quot;mb-0 b-icon&quot;&gt;
                           &lt;button class=&quot;btn btn-link collapsed d-flex align-items-center&quot; type=&quot;button&quot; data-parent=&quot;#accordion&quot; data-toggle=&quot;collapse&quot; data-target=&quot;#collapse-5&quot; aria-expanded=&quot;false&quot; aria-controls=&quot;collapse-5&quot;&gt;
                             Card 5
+                            &lt;span class=&quot;seta-accordion&quot;&gt;&lt;/span&gt;
                           &lt;/button&gt;
                         &lt;/h5&gt;
                       &lt;/div&gt;
@@ -1596,33 +1626,47 @@
               <p>estilo.css</p>
               <pre>
                 <code class="language-css" data-lang="css">
-                  // accordion + icones bradesco
+                  // accordion icones
 
                   #accordion .card .card-header h5 button{
                     width: 100%;
                     text-align: left;
                     text-decoration: none;
+                    padding: 15px;
                   }
+
+                  .card-header{padding: 0;}
 
                   .b-icon &gt; button {
                     display: block;
                     position: relative;
                   }
 
-                  .b-icon &gt; button:after {
-                    content: &quot;\e958&quot;;
-                    font-family: &#039;bradesco_v2&#039;;
+                  .seta-accordion{
                     position: absolute;
-                    right: 0;
-                    font-size: 23px;
+                    right: 15px;
+                    background:url(../img/seta-accordion.svg);
+                    transform: rotate(180deg); /* Equal to rotateZ(45deg) */
+                    width: 30px;
+                    height: 21px;
+                    background-repeat: no-repeat;
+                    background-position: center;
+                    transition: 0.6s all;
                   }
 
-                  .b-icon &gt; button[aria-expanded=&quot;true&quot;]:after {
-                    content: &quot;\e96d&quot;;
-                    font-size: 23px;
+                  .b-icon &gt; button[aria-expanded=&quot;true&quot;] .seta-accordion{
+                    position: absolute;
+                    right: 15px;
+                    background:url(../img/seta-accordion.svg);
+                    width: 30px;
+                    height: 21px;
+                    background-repeat: no-repeat;
+                    background-position: center;
+                    transform: rotate(0deg);
+                    transition: 0.6s all;
                   }
 
-                  // fim accordion + icones bradesco
+                  // fim accordion icones
                 </code>
               </pre>
             </div>
