--- a/Bliblioteca 2020/index.html
+++ b/Bliblioteca 2020/index.html
@@ -1253,8 +1253,7 @@
               <p><a href="https://github.com/fernandopinhel/biblioteca-de-componentes/blob/master/downloads/jquery-3.3.1.slim.min.js" target="_blank">Jquery 3.3.1 slim min</a></p>
               <p><a href="https://github.com/fernandopinhel/biblioteca-de-componentes/blob/master/downloads/popper.min.js" target="_blank">Popper min</a></p>
               <h6>Baixar os SVG´s das setas e colocar na pasta img</h6>
-              <p><a href="https://github.com/fernandopinhel/biblioteca-de-componentes/blob/master/downloads/prev-carousel.svg" target="_blank">Prev</a></p>
-              <p><a href="https://github.com/fernandopinhel/biblioteca-de-componentes/blob/master/downloads/next-carousel.svg" target="_blank">Next</a></p>
+              <p><a href="https://github.com/fernandopinhel/biblioteca-de-componentes/blob/master/downloads/setas-carousel.zip" target="_blank">Setas</a></p>              
             </div>
           </div>
           <div class="col-md-6">
